--- a/app/src/main/res/layout/activity_product_page.xml
+++ b/app/src/main/res/layout/activity_product_page.xml
@@ -79,13 +79,14 @@
             android:layout_below="@id/tv1"
             />
     </RelativeLayout>
+
     <RelativeLayout
         android:id="@+id/relativelayout3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/relativelayout2"
-        android:layout_margin="10dp"
-        >
+        android:layout_marginTop="25dp"
+        android:layout_marginBottom="10dp">
 
         <ImageView
             android:id="@+id/iv_cowmilk"
@@ -98,134 +99,107 @@
             android:id="@+id/btn_cowmilk"
             android:layout_width="180dp"
             android:layout_height="wrap_content"
-            android:text="click!! CowMilk"
-            android:textColor="@color/White"
-            android:background="@drawable/buttonround"
             android:layout_below="@id/iv_cowmilk"
+            android:background="@drawable/buttonround"
             android:gravity="center"
-            />
+            android:text="click!! CowMilk"
+            android:textColor="@color/White" />
+
         <ImageView
             android:id="@+id/iv_buffallo"
             android:layout_width="180dp"
             android:layout_height="150dp"
-            android:src="@drawable/bufallo"
             android:layout_alignParentRight="true"
-            />
-
-
-
-
-
-
-
-        <!--  <ImageView
-            android:id="@+id/iv_buffallo"
-            android:layout_width="180dp"
-            android:layout_height="150dp"
-            android:src="@drawable/bufallo"
-            android:layout_alignParentRight="true"
-            />-->
-
-
-
-
-
-
-
+            android:src="@drawable/bufallo" />
 
 
         <Button
             android:id="@+id/btn_buffallo"
             android:layout_width="180dp"
             android:layout_height="wrap_content"
-            android:text="click!! Buffallo"
-            android:textColor="@color/White"
-            android:background="@drawable/buttonround"
             android:layout_below="@id/iv_buffallo"
-            android:gravity="center"
             android:layout_alignParentRight="true"
-            />
+            android:background="@drawable/buttonround"
+            android:gravity="center"
+            android:text="click!! Buffallo"
+            android:textColor="@color/White" />
 
         <ImageView
             android:id="@+id/iv_chhach"
             android:layout_width="180dp"
             android:layout_height="150dp"
-            android:src="@drawable/chhach"
-            android:layout_alignParentLeft="true"
             android:layout_below="@+id/btn_cowmilk"
-            />
+            android:layout_alignParentLeft="true"
+            android:src="@drawable/chhach" />
+
         <Button
             android:id="@+id/btn_chhach"
             android:layout_width="180dp"
             android:layout_height="wrap_content"
-            android:text="click!! Chhach"
-            android:textColor="@color/White"
-            android:background="@drawable/buttonround"
             android:layout_below="@id/iv_chhach"
+            android:background="@drawable/buttonround"
             android:gravity="center"
-            />
+            android:text="click!! Chhach"
+            android:textColor="@color/White" />
 
         <ImageView
             android:id="@+id/iv_ghee"
             android:layout_width="180dp"
             android:layout_height="150dp"
-            android:src="@drawable/ghee"
-            android:layout_alignParentRight="true"
             android:layout_below="@+id/btn_buffallo"
-            />
+            android:layout_alignParentRight="true"
+            android:src="@drawable/ghee" />
+
         <Button
             android:id="@+id/btn_ghee"
             android:layout_width="180dp"
             android:layout_height="wrap_content"
-            android:text="click!! Ghee"
-            android:textColor="@color/White"
-            android:background="@drawable/buttonround"
             android:layout_below="@id/iv_ghee"
             android:layout_alignParentRight="true"
+            android:background="@drawable/buttonround"
             android:gravity="center"
-            />
+            android:text="click!! Ghee"
+            android:textColor="@color/White" />
+
         <ImageView
             android:id="@+id/iv_curd"
             android:layout_width="180dp"
             android:layout_height="150dp"
-            android:src="@drawable/curd"
             android:layout_below="@id/btn_chhach"
             android:layout_alignParentLeft="true"
-            />
+            android:src="@drawable/curd" />
+
         <Button
             android:id="@+id/btn_curd"
             android:layout_width="180dp"
             android:layout_height="wrap_content"
-            android:text="click!! Curd"
-            android:textColor="@color/White"
-            android:background="@drawable/buttonround"
             android:layout_below="@id/iv_curd"
+            android:background="@drawable/buttonround"
             android:gravity="center"
-            />
+            android:text="click!! Curd"
+            android:textColor="@color/White" />
+
         <ImageView
             android:id="@+id/iv_paneer"
             android:layout_width="180dp"
             android:layout_height="150dp"
-            android:src="@drawable/paneer"
             android:layout_below="@id/btn_ghee"
             android:layout_alignParentRight="true"
-            />
+            android:src="@drawable/paneer" />
+
         <Button
             android:id="@+id/btn_paneer"
             android:layout_width="180dp"
             android:layout_height="wrap_content"
-            android:text="click!! Paneer"
-            android:textColor="@color/White"
-            android:background="@drawable/buttonround"
             android:layout_below="@id/iv_paneer"
-            android:gravity="center"
             android:layout_alignParentRight="true"
-            />
-
+            android:background="@drawable/buttonround"
+            android:gravity="center"
+            android:text="click!! Paneer"
+            android:textColor="@color/White" />
 
 
     </RelativeLayout>
-
 
 
 </RelativeLayout>
