--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -23,4 +23,10 @@
         android:name="com.delhidairy.home.ui.send.SendFragment"
         android:label="@string/menu_send"
         tools:layout="@layout/fragment_send" />
+
+    <fragment
+        android:id="@+id/webview"
+        android:name="com.delhidairy.home.ui.aboutus.AboutusFragment"
+        android:label="aboutus"
+        tools:layout="@layout/fragment_aboutus" />
 </navigation>
