navigation with item color

--- a/app/src/main/res/layout/registration_form_activity.xml
+++ b/app/src/main/res/layout/registration_form_activity.xml
@@ -4,9 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.MainActivity">
-
-
+    tools:context=".activities.RegistrationFormActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -233,12 +231,7 @@
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
-
         </RelativeLayout>
 
-
     </LinearLayout>
-
-
-
 </ScrollView>
