--- a/app/src/main/res/layout/activity_item_list_layout.xml
+++ b/app/src/main/res/layout/activity_item_list_layout.xml
@@ -5,13 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/BackgroundColor"
-    android:padding="8dp">
+    android:padding="10dp">
 
 <ImageView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:src="@mipmap/ic_launcher"
-    android:padding="8dp"
+    android:layout_margin="10dp"
+    android:padding="10dp"
     android:id="@+id/imgIcon"
     />
 
@@ -23,8 +24,10 @@
     android:gravity="center"
     android:background="@drawable/rectangle1"
     android:layout_gravity="center"
-    android:padding="8dp"
+    android:padding="10dp"
+    android:layout_margin="10dp"
     android:id="@+id/txtTitle"
+
     />
 
 </LinearLayout>
