--- a/app/src/main/res/layout/activity_item_list_layout.xml
+++ b/app/src/main/res/layout/activity_item_list_layout.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
-    android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:gravity="center"
     android:background="@color/BackgroundColor"
     android:padding="10dp">
 
@@ -17,7 +18,7 @@
     />
 
 <Button
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_weight="1"
     android:text="@string/app_name"
