adding model class and api images with background color

--- a/app/src/main/res/layout/activity_item_list_layout.xml
+++ b/app/src/main/res/layout/activity_item_list_layout.xml
@@ -25,8 +25,7 @@
     android:background="@drawable/rectangle1"
     android:layout_gravity="center"
     android:layout_margin="10dp"
-    android:id="@+id/txtTitle"
-
+    android:id="@+id/btnTitle"
     />
 
 </LinearLayout>
