--- a/app/src/main/res/layout/activity_cow_milk.xml
+++ b/app/src/main/res/layout/activity_cow_milk.xml
@@ -1,126 +1,133 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/BackgroundColor"
+    android:background="@drawable/background_color"
     tools:context=".activities.CowMilkActivity">
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@color/BackgroundColor">
-
-    <ImageView
-        android:id="@+id/iv_cowmilkdetails"
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:src="@drawable/cow1" />
-
     <LinearLayout
-        android:id="@+id/linearlayout1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/iv_cowmilkdetails"
-       android:layout_margin="10dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:padding="10dp"
-            android:text="Quantity:(in Liter)"
-            android:textSize="20sp"/>
-
-        <Button
-            android:id="@+id/btnminus"
-            android:layout_width="45dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:background="@drawable/circlebutton"
-            android:padding="10dp"
-            android:text="-"
-            android:textColor="@color/White"
-            android:textSize="20sp"/>
-
-
-        <EditText
-            android:id="@+id/et_number"
-            android:layout_width="45dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:inputType="number"
-            android:maxLength="3"
-            android:hint="00"
-          android:textColorHint="@color/Black"
-
-            android:backgroundTint="@color/White"
-            android:textSize="30sp" />
-        <Button
-            android:id="@+id/btnplush"
-            android:layout_width="45dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:background="@drawable/circlebutton"
-            android:padding="10dp"
-            android:text="+"
-            android:textColor="@color/White"
-            android:textSize="20sp"/>
-
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/linearayout2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/linearlayout1"
-        android:layout_margin="20dp"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <Button
-            android:id="@+id/btn_submit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:background="@drawable/buttonround"
-            android:layout_gravity="center"
-            android:text="submit"
-            android:textColor="@color/White" />
+        <ImageView
+            android:id="@+id/iv_cowmilkdetails"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:src="@drawable/cow1" />
 
-        <TextView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/linearlayout1"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/btn_submit"
-            android:layout_margin="10dp"
-            android:text="Product Description"
-            android:textSize="30sp"
-            android:layout_gravity="center"
-            />
+            android:layout_below="@id/iv_cowmilkdetails"
+            android:layout_margin="10dp">
 
-        <TextView
-            android:layout_width="wrap_content"
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="10dp"
+                android:gravity="center"
+                android:padding="10dp"
+                android:text="Quantity:- (in Liter)"
+                android:textColor="@color/black"
+                android:textSize="16sp" />
+
+            <Button
+                android:id="@+id/btnminus"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:layout_weight="1"
+                android:background="@drawable/circlebutton"
+                android:padding="10dp"
+                android:text="-"
+                android:textColor="@color/Black"
+                android:textSize="20sp" />
+
+
+            <EditText
+                android:id="@+id/et_number"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:layout_weight="1"
+                android:backgroundTint="@color/White"
+                android:gravity="center"
+                android:hint="0"
+                android:inputType="number"
+                android:maxLength="3"
+                android:padding="10dp"
+                android:textColorHint="@color/Black"
+                android:textSize="20sp" />
+
+            <Button
+                android:id="@+id/btnplush"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:layout_weight="1"
+                android:background="@drawable/circlebutton"
+                android:padding="10dp"
+                android:text="+"
+                android:textColor="@color/Black"
+                android:textSize="20sp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/linearayout2"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="15dp"
-            android:text="The milk of cows, goats, or other animals, used as food by humans.
+            android:layout_below="@id/linearlayout1"
+            android:layout_margin="20dp"
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/btn_submit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="10dp"
+                android:background="@drawable/rectangle1"
+                android:text="submit"
+                android:textColor="@color/Black" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/btn_submit"
+                android:layout_gravity="center"
+                android:layout_margin="10dp"
+                android:text="Product Description"
+                android:textColor="@color/black"
+                android:textSize="30sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="15dp"
+                android:text="The milk of cows, goats, or other animals, used as food by humans.
 Any of various potable liquids resembling milk, such as coconut milk or soymilk. A liquid resembling milk in consistency, such as milkweed sap or milk of magnesia."
 
-            />
+                />
+        </LinearLayout>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/linearayout2"
+            android:layout_alignParentBottom="true"
+            android:layout_gravity="center"
+            android:layout_margin="20dp"
+            android:background="@color/Blue"
+            android:gravity="center"
+            android:padding="10dp"
+            android:text="Enquiry Now"
+            android:textColor="@color/White"
+            android:textSize="20sp" />
+
     </LinearLayout>
-
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Enquiry Now"
-        android:textColor="@color/White"
-        android:gravity="center"
-        android:background="@color/Blue"
-        android:layout_below="@id/linearayout2"
-        android:layout_alignParentBottom="true"
-        />
-
-    </RelativeLayout>
-
-
 </ScrollView>
