--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,7 +8,7 @@
         android:id="@+id/productlist"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
+        android:background="@drawable/background_color"
         tools:context="home.ui.home.HomeFragment">
 
 
