--- a/app/src/main/res/layout/activity_cow_milk.xml
+++ b/app/src/main/res/layout/activity_cow_milk.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -17,71 +18,80 @@
             android:layout_height="150dp"
             android:src="@drawable/cow1" />
 
-        <LinearLayout
-            android:id="@+id/linearlayout1"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/iv_cowmilkdetails"
-            android:layout_margin="10dp">
+            android:background="@color/Lightgreen"
+            android:layout_margin="10dp"
+            app:cardCornerRadius="10dp"
+            >
 
-            <TextView
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_margin="10dp"
                 android:layout_gravity="center"
-                android:layout_margin="10dp"
-                android:gravity="center"
-                android:padding="10dp"
-                android:text="Quantity:- (in Liter)"
-                android:textColor="@color/black"
-                android:textSize="16sp" />
-
-            <Button
-                android:id="@+id/btnminus"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:layout_weight="1"
-                android:background="@drawable/circlebutton"
-                android:padding="10dp"
-                android:text="-"
-                android:textColor="@color/Black"
-                android:textSize="20sp" />
+                android:orientation="horizontal">
 
 
-            <EditText
-                android:id="@+id/et_number"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:layout_weight="1"
-                android:backgroundTint="@color/White"
-                android:gravity="center"
-                android:hint="0"
-                android:inputType="number"
-                android:maxLength="3"
-                android:padding="10dp"
-                android:textColorHint="@color/Black"
-                android:textSize="20sp" />
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="3"
+                    android:gravity="center"
+                    android:text="Quantity:(in L/Kg)"
+                    android:textAlignment="center"
+                    android:textColor="@color/black"
+                    android:textSize="15sp" />
 
-            <Button
-                android:id="@+id/btnplush"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:layout_weight="1"
-                android:background="@drawable/circlebutton"
-                android:padding="10dp"
-                android:text="+"
-                android:textColor="@color/Black"
-                android:textSize="20sp" />
 
-        </LinearLayout>
+                <Button
+                    android:id="@+id/btnminus"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@drawable/circlebutton"
+                    android:text="-"
+                    android:textAlignment="center"
+                    android:textColor="@color/Black"
+                    android:textSize="20sp" />
+
+                <EditText
+                    android:id="@+id/et_number"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:backgroundTint="@color/White"
+                    android:gravity="center"
+                    android:hint="0"
+                    android:inputType="number"
+                    android:maxLength="3"
+                    android:textColorHint="@color/Black"
+                    android:textSize="20sp" />
+
+                <Button
+                    android:id="@+id/btnplush"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@drawable/circlebutton"
+                    android:text="+"
+                    android:textAlignment="center"
+                    android:textColor="@color/Black"
+                    android:textSize="20sp" />
+            </LinearLayout>
+
+
+        </androidx.cardview.widget.CardView>
 
         <LinearLayout
             android:id="@+id/linearayout2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/linearlayout1"
+            android:layout_below="@id/cardView"
             android:layout_margin="20dp"
             android:orientation="vertical">
 
