--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#F8EE99</color>
     <color name="colorAccent">#CEC5C8</color>
     <color name="White">#fff</color>
-    <color name="BackgroundColor">#DEE0B7</color>
+    <color name="BackgroundColor">#DEE0AE</color>
     <color name="HeaderBackground">#ED26AFF0</color>
     <color name="ProductColor">#0CA4EB</color>
     <color name="CommentColor">#86C5E2</color>
