--- a/app/src/main/res/layout/activity_cow_milk.xml
+++ b/app/src/main/res/layout/activity_cow_milk.xml
@@ -33,6 +33,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:layout_gravity="center"
+                android:background="@drawable/background_color"
                 android:orientation="horizontal">
 
 
