--- a/app/src/main/res/drawable/background_color.xml
+++ b/app/src/main/res/drawable/background_color.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:startColor="#46681C"
-        android:centerColor="#EE9292"
-        android:endColor="#BAFA71"
+        android:startColor="#B0D9EC"
+        android:centerColor="#38B2E9"
+        android:endColor="#69CBF7"
         android:angle="90"/>
     <corners
         android:radius="0dp"/>
