--- a/app/src/main/res/layout/activity_item_list_layout.xml
+++ b/app/src/main/res/layout/activity_item_list_layout.xml
@@ -22,7 +22,7 @@
     android:layout_height="wrap_content"
     android:text="@string/app_name"
     android:gravity="center"
-    android:background="@drawable/rectangle1"
+    android:background="@drawable/rectangleshape"
     android:layout_gravity="center"
     android:layout_margin="10dp"
     android:id="@+id/btnTitle"
