--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -4,110 +4,125 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="10dp"
-    android:background="@drawable/background_color"
     tools:context=".activities.ActivityLoginPage">
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        >
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:background="@color/Blue"
-        >
-        <ImageView
-            android:layout_width="150dp"
-            android:layout_height="100sp"
-            android:layout_margin="25sp"
-            android:src="@drawable/logo"
-            />
-        <TextView
+       >
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="DesiMilk"
-            android:textSize="30dp"
-            android:textStyle="bold"
-            android:layout_marginTop="40sp"
-            />
+            android:layout_height="250dp"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:background="@drawable/gradient_background"
+            >
+            <de.hdodenhof.circleimageview.CircleImageView
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/profile_image"
+                android:layout_width="96dp"
+                android:layout_height="96dp"
+                android:src="@drawable/logo"
+                app:civ_border_width="2dp"
+                app:civ_border_color="#03A9F4"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Login"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:textColor="#ffff"
+                android:layout_marginLeft="100dp"
+                android:layout_marginTop="30dp"
+                />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginTop="45dp"
+            >
+            <EditText
+                android:id="@+id/et_email"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="25dp"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp"
+                android:background="@drawable/rectangleshape"
+                android:drawableLeft="@drawable/ic_email_black_24dp"
+                android:drawablePadding="15dp"
+                android:hint="Email"
+                android:padding="8dp"
+                android:paddingLeft="10dp"
+                android:textSize="20sp" />
+            <EditText
+                android:id="@+id/et_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Password"
+                android:inputType="textPassword"
+                android:textSize="20sp"
+                android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
+                android:drawablePadding="10dp"
+                android:background="@drawable/rectangleshape"
+                android:padding="8dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="25dp"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp"
+                />
+            <TextView
+                android:layout_width="175dp"
+                android:layout_height="wrap_content"
+                android:text="Forgot Password ? "
+                android:textColor="@color/Black"
+                android:layout_marginBottom="25dp"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp"
+                android:textSize="15sp"
+                 />
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Login"
+                android:id="@+id/loginBtn"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:layout_marginTop="35dp"
+                android:layout_marginRight="25dp"
+                android:layout_marginLeft="25dp"
+                android:layout_marginBottom="15dp"
+                android:background="@drawable/gradient_button"
+                />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:id="@+id/llsignup"
+            android:gravity="center"
 
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Don't have an account?"
+                android:textSize="15sp"
+                android:layout_marginTop="3dp"
+                android:textColor="@color/Black"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Signup"
+                android:textColor="@color/blue"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                />
+
+        </LinearLayout>
     </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginTop="40sp"
-        >
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="Please Login"
-            android:textSize="40sp"
-            android:layout_marginLeft="80sp"
-            />
-
-        <EditText
-            android:id="@+id/et_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Email"
-            android:textSize="25sp"
-            android:layout_margin="25sp"
-            />
-        <EditText
-            android:id="@+id/et_password"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Password"
-            android:textSize="25sp"
-            android:layout_margin="25sp"
-
-            />
-        <Button
-            android:id="@+id/loginBtn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Submit"
-            android:textSize="25sp"
-            android:textStyle="bold"
-            android:layout_margin="20sp"
-            android:background="@drawable/gradient_button"
-            />
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        >
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Not Account ?"
-            android:textColor="@color/blue"
-            android:textSize="20sp"
-            android:paddingLeft="40sp"
-            android:layout_marginLeft="35sp"
-            android:layout_marginTop="10sp"
-            />
-        <TextView
-            android:id="@+id/click_signup"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="SignUp"
-            android:textColor="@color/blue"
-            android:textSize="30sp"
-            android:textStyle="bold"
-            android:layout_marginLeft="10sp"
-            android:layout_marginTop="10sp"
-            />
-    </LinearLayout>
-    </LinearLayout>
-
 </ScrollView>
-
