--- a/app/src/main/res/layout/activity_product_description.xml
+++ b/app/src/main/res/layout/activity_product_description.xml
@@ -18,75 +18,66 @@
             android:layout_height="150dp"
             android:src="@drawable/cow1" />
 
-        <androidx.cardview.widget.CardView
+        <LinearLayout
             android:id="@+id/cardView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/iv_cowmilkdetails"
-            android:background="@color/Lightgreen"
+            android:layout_gravity="center"
             android:layout_margin="10dp"
-            app:cardCornerRadius="10dp"
-            >
+            android:background="@drawable/background_color"
+            android:orientation="horizontal">
 
-            <LinearLayout
-                android:layout_width="match_parent"
+
+            <TextView
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
                 android:layout_gravity="center"
-                android:background="@color/Lightgreen"
-                android:orientation="horizontal">
+                android:layout_weight="3"
+                android:gravity="center"
+                android:text="Quantity:(in L/Kg)"
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textSize="15sp" />
 
 
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="3"
-                    android:gravity="center"
-                    android:text="Quantity:(in L/Kg)"
-                    android:textAlignment="center"
-                    android:textColor="@color/black"
-                    android:textSize="15sp" />
+            <Button
+                android:id="@+id/btnminus"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/circlebutton"
+                android:text="-"
+                android:textAlignment="center"
+                android:textColor="@color/White"
+                android:textSize="20sp" />
 
+            <EditText
+                android:id="@+id/et_number"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:backgroundTint="@color/White"
+                android:gravity="center"
+                android:hint="0"
+                android:inputType="number"
+                android:maxLength="3"
+                android:textColor="@color/White"
+                android:textColorHint="@color/White"
+                android:textSize="20sp" />
 
-                <Button
-                    android:id="@+id/btnminus"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:background="@drawable/circlebutton"
-                    android:text="-"
-                    android:textAlignment="center"
-                    android:textColor="@color/Black"
-                    android:textSize="20sp" />
+            <Button
+                android:id="@+id/btnplush"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/circlebutton"
+                android:text="+"
+                android:textAlignment="center"
+                android:textColor="@color/White"
+                android:textSize="20sp" />
 
-                <EditText
-                    android:id="@+id/et_number"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:backgroundTint="@color/White"
-                    android:gravity="center"
-                    android:hint="0"
-                    android:inputType="number"
-                    android:maxLength="3"
-                    android:textColorHint="@color/Black"
-                    android:textSize="20sp" />
-
-                <Button
-                    android:id="@+id/btnplush"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:background="@drawable/circlebutton"
-                    android:text="+"
-                    android:textAlignment="center"
-                    android:textColor="@color/Black"
-                    android:textSize="20sp" />
-            </LinearLayout>
-
-
-        </androidx.cardview.widget.CardView>
+        </LinearLayout>
 
         <LinearLayout
             android:id="@+id/linearayout2"
@@ -109,8 +100,8 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="15dp"
                 android:layout_marginTop="20dp"
+                android:padding="15dp"
                 android:text="The milk of cows, goats, or other animals, used as food by humans.
 Any of various potable liquids resembling milk, such as coconut milk or soymilk. A liquid resembling milk in consistency, such as milkweed sap or milk of magnesia."
 
@@ -125,7 +116,7 @@ Any of various potable liquids resembling milk, such as coconut milk or soymilk.
             android:layout_alignParentBottom="true"
             android:layout_gravity="center"
             android:layout_margin="20dp"
-            android:background="@color/Blue"
+            android:background="@drawable/gradient_button"
             android:gravity="center"
             android:padding="10dp"
             android:text="Enquiry Now"
