--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -4,191 +4,182 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background_color"
     android:orientation="vertical"
     tools:context=".activities.Activity_Singup">
 
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:background="@color/Blue"
+        android:layout_height="150dp"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:background="@drawable/gradient_signup"
         >
-
-
-        <ImageView
-            android:layout_width="150dp"
-            android:layout_height="100sp"
-            android:layout_margin="25sp"
+        <de.hdodenhof.circleimageview.CircleImageView
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/profile_image"
+            android:layout_width="96dp"
+            android:layout_height="96dp"
             android:src="@drawable/logo"
-            />
+            android:layout_margin="10dp"
+            app:civ_border_width="2dp"
+            app:civ_border_color="#03A9F4"/>
+
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="DesiMilk"
-            android:textSize="30dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Signup"
+            android:textSize="20sp"
             android:textStyle="bold"
-            android:layout_marginTop="40sp"
+            android:gravity="center"
+            android:textColor="#ffff"
+
             />
-
     </LinearLayout>
-
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginTop="45dp"
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+
+            >
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="80sp"
-                android:text="Signup"
-                android:textSize="45sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10sp"
+                android:layout_margin="25dp"
                 android:text="First Name"
-                android:textSize="28sp" />
+                android:textColor="@color/Black"
+                android:textSize="20sp" />
 
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="15sp"
-                android:layout_marginRight="15sp"
-                android:background="@drawable/rectangleshape"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp"
                 android:hint="First Name"
-                android:padding="10sp"
-                android:textSize="28sp" />
+                android:background="@drawable/rectangleshape"
+                android:padding="15dp"
+                android:textSize="15sp" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="10sp"
                 android:text="Last Name"
-                android:textSize="28sp" />
+                android:layout_margin="25dp"
+                android:textColor="@color/Black"
+                android:textSize="20sp" />
 
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="15sp"
-                android:layout_marginRight="15sp"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp"
                 android:background="@drawable/rectangleshape"
                 android:hint="Last Name"
-                android:padding="10sp"
-                android:textSize="28sp" />
+                android:padding="15dp"
+                android:textSize="15sp"  />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="10sp"
+                android:layout_margin="25dp"
+                android:textColor="@color/Black"
                 android:text="Email"
-                android:textSize="28sp" />
+                android:textSize="20sp" />
 
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="15sp"
-                android:layout_marginRight="15sp"
                 android:background="@drawable/rectangleshape"
                 android:hint="Enter Email"
-                android:padding="10sp"
-                android:textSize="28sp"
-
+                android:padding="15dp"
+                android:textSize="15sp"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp"
                 />
-
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="10sp"
+                android:layout_margin="25dp"
+                android:textColor="@color/Black"
                 android:text="Address"
-                android:textSize="28sp" />
+                android:textSize="20sp" />
 
             <EditText
                 android:layout_width="match_parent"
-                android:layout_height="100sp"
-                android:layout_marginLeft="15sp"
-                android:layout_marginRight="15sp"
+                android:layout_height="100dp"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp"
                 android:background="@drawable/rectangleshape"
                 android:gravity="left"
                 android:hint="Enter Address"
-                android:padding="20sp"
-                android:textSize="28sp"
-
+                android:padding="15dp"
+                android:textSize="15sp"
                 />
-
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="10sp"
+                android:layout_margin="25dp"
+                android:textColor="@color/Black"
                 android:text="Mobile"
-                android:textSize="28sp" />
-
+                android:textSize="20sp" />
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="15sp"
-                android:layout_marginRight="15sp"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp"
                 android:background="@drawable/rectangleshape"
                 android:hint="Enter number"
                 android:inputType="number"
-                android:padding="10sp"
-                android:textSize="28sp"
-
+                android:padding="15dp"
+                android:textSize="15sp"
                 />
-
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="10sp"
+                android:layout_margin="25dp"
+                android:textColor="@color/Black"
                 android:text="Password"
-                android:textSize="28sp" />
+                android:textSize="20sp" />
 
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="15sp"
-                android:layout_marginRight="15sp"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp"
                 android:background="@drawable/rectangleshape"
                 android:hint="Enter Password"
-                android:padding="10sp"
-                android:textSize="28sp"
-
+                android:padding="15dp"
+                android:textSize="15sp"
                 />
-
 
             <Button
                 android:id="@+id/btn_Submit"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="15sp"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp"
+                android:layout_marginTop="25dp"
                 android:background="@drawable/gradient_button"
                 android:text="Submit"
-                android:textSize="25sp"
+                android:textSize="20sp"
                 android:textStyle="bold"
-
                 />
-
             <Button
                 android:id="@+id/btn_Login"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="15sp"
+                android:layout_margin="25dp"
                 android:background="@drawable/gradient_button"
                 android:text="Login"
-                android:textSize="25sp"
+                android:textSize="20sp"
                 android:textStyle="bold"
-
                 />
-
-
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
