--- a/app/src/main/res/layout/activity_token_amount.xml
+++ b/app/src/main/res/layout/activity_token_amount.xml
@@ -12,22 +12,27 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:background="@color/Blue"
+        android:background="@color/light_blue"
         >
 
-        <ImageView
-            android:layout_width="150dp"
-            android:layout_height="100sp"
-            android:layout_margin="25sp"
+        <de.hdodenhof.circleimageview.CircleImageView
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/profile_image"
+            android:layout_width="96dp"
+            android:layout_height="96dp"
             android:src="@drawable/logo"
-            />
+            android:layout_margin="10dp"
+            app:civ_border_width="2dp"
+            app:civ_border_color="#03A9F4"/>
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:text="DesiMilk"
+            android:textColor="@color/White"
+            android:gravity="center"
             android:textSize="30dp"
             android:textStyle="bold"
-            android:layout_marginTop="40sp"
+            android:layout_marginTop="40dp"
             />
     </LinearLayout>
 
@@ -35,14 +40,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_margin="20sp"
+        android:layout_margin="20dp"
         >
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="45dp"
             android:text="Please Pay Token Amount"
-            android:textSize="45sp"
+            android:textSize="25sp"
+            android:textColor="@color/Black"
             android:gravity="center"
             android:textStyle="bold"
             />
@@ -50,7 +57,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="For Confirmation"
-            android:textSize="45sp"
+            android:textSize="35sp"
+            android:layout_marginTop="25dp"
             android:textStyle="bold"
             android:layout_gravity="center"
             />
@@ -61,12 +69,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="PAY"
-            android:textSize="30sp"
+            android:textSize="20sp"
             android:textStyle="bold"
-            android:layout_margin="65sp"
+            android:layout_margin="65dp"
             android:background="@drawable/gradient_button"
             />
     </LinearLayout>
-
 
 </LinearLayout>
