--- a/app/src/main/res/layout/nav_header_dash_board.xml
+++ b/app/src/main/res/layout/nav_header_dash_board.xml
@@ -10,32 +10,29 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="100sp"
-        android:layout_height="100sp"
-        android:contentDescription="@string/nav_header_desc"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@drawable/logo" />
+    <de.hdodenhof.circleimageview.CircleImageView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/profile_image"
+        android:layout_width="96dp"
+        android:layout_height="96dp"
+        android:src="@drawable/logo"
+        android:layout_margin="10dp"
+        app:civ_border_width="2dp"
+        app:civ_border_color="#03A9F4"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:paddingLeft="5sp"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
         android:text="DesiMilk"
+        android:gravity="center"
+        android:textColor="@color/White"
         android:textSize="15sp"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="studioDesiMilk.com"
-        android:textSize="15sp"
-        />
+
 
 </LinearLayout>
