--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -94,15 +94,8 @@
     <color name="light_steel_blue">#B0C4DE</color>
     <color name="pale_turquoise">#AFEEEE</color>
     <color name="greenYellow">#ADFF2F</color>
-    <color name="light_blue">#ADD8E6</color>
+    <color name="light_blue">#62C2EE</color>
     <color name="dark_gray">#A9A9A9</color>
-    <color name="brown">#A52A2A</color>
-    <color name="sienna">#A0522D</color>
-    <color name="yellow_green">#9ACD32</color>
-    <color name="dark_orchid">#9932CC</color>
-    <color name="pale_green">#98FB98</color>
-    <color name="dark_violet">#9400D3</color>
-    <color name="mediumPurple">#9370DB</color>
     <color name="_light_green">#90EE90</color>
     <color name="dark_sea_green">#8FBC8F</color>
     <color name="saddle_brown">#8B4513</color>
@@ -142,21 +135,9 @@
     <color name="light_sea_green">#20B2AA</color>
     <color name="dodger_blue">#1E90FF</color>
     <color name="midnight_blue">#191970</color>
-    <color name="aqua">#00FFFF</color>
-    <color name="cyan">#00FFFF</color>
-    <color name="spring_green">#00FF7F</color>
-    <color name="lime">#00FF00</color>
-    <color name="medium_spring_green">#00FA9A</color>
-    <color name="dark_turquoise">#00CED1</color>
-    <color name="deep_sky_blue">#00BFFF</color>
-    <color name="dark_cyan">#008B8B</color>
-    <color name="teal">#008080</color>
-    <color name="green">#008000</color>
     <color name="dark_green">#006400</color>
     <color name="blue">#0000FF</color>
-    <color name="medium_blue">#0000CD</color>
-    <color name="dark_blue">#00008B</color>
-    <color name="navy">#000080</color>
+
     <color name="black">#000000</color>
 
 </resources>
